# python-tasks

./: pyproject.toml
Lesson 12.1/project2/: requirements.txt
Lesson 12.1/project3/: pyproject.toml
Lesson 12.1/project3/project3/: cli.py
Lesson 13.2/: pyproject.toml
Lesson 13.2/src/: rectangle.py
Lesson 14.1/: pyproject.toml  todolist.py
Lesson 14.2/src/: category.py  product.py  store.py
Lesson 14.2/tests/: test_category.py  test_product.py
Lesson 15.1/: main.py
Lesson 15.2/: item.py  multBy.py  myList.py  person.py  vehicle.py
Lesson 17.1/: main.py
Lesson 18.3/: config.py  database.ini  main.py  pyproject.toml  utils.py
Lesson 19.1/: index.html  main.py
Lesson 19.1/practice/: index.html  main.py  my_server.py
Lesson 20.1/: data.json  requirements.txt
Lesson 20.1/config/: settings.py  urls.py
Lesson 20.1/mainapp/: admin.py  models.py  urls.py  views.py
Lesson 20.1/mainapp/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_remove_product_create_date_and_more.py  0004_alter_product_create_at.py  0005_alter_category_options.py  0006_alter_product_options.py  0007_remove_product_is_active.py
Lesson 20.1/mainapp/templatetags/: tags.py
Lesson 8.2/: main.py  question.py  utils.py
Lesson/ecatalog/: asgi.py  settings.py  urls.py  wsgi.py
Lesson_12.1/project3/project3/: cli.py
Lesson_13.2/: pyproject.toml
Lesson_13.2/src/: rectangle.py
Lesson_14.1/: pyproject.toml
Lesson_14.2/src/: store.py
Lesson_15.2/: myList.py  person.py  vehicle.py
Lesson_18.3/: config.py  main.py  pyproject.toml
Lesson_8.2/: main.py  question.py  utils.py
(+4 files in other folders)
