[tool.poetry]
name = "lesson 18-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lesson 18"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.97.0"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
