[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["Gamid <gamaizingg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[tool.poetry.scripts]
say-welcome = "project3.cli:welcome"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
